--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Website</title>
+    <title>SEF Boletins de Alojamento</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,6 +17,18 @@
             background-color: #6200ea;
             color: white;
             padding: 20px 0;
+        }
+        nav {
+            margin: 20px 0;
+        }
+        nav a {
+            text-decoration: none;
+            color: white;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
         }
         main {
             margin: 20px;
@@ -34,13 +46,17 @@
 <body>
     <header>
         <h1>Welcome to My Website</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="privacy.html">Privacy Policy</a>
+        </nav>
     </header>
     <main>
-        <p>This is a simple static website. Hosted using Google Drive!</p>
-        <p>Edit this content to make it your own.</p>
+        <p>This is a simple static website. Hosted using GitHub Pages!</p>
     </main>
     <footer>
-        <p>&copy; 2024 My Simple Website</p>
+        <p>&copy; 2024 </p>
+        <a href="privacy.html">Privacy Policy</a>    
     </footer>
 </body>
 </html>
