--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>This is a simple static website. Hosted using GitHub Pages!</p>
     </main>
     <footer>
-        <p>&copy; 2024 </p>
+        <p>© 2024 All rights reserved.</p>
         <a href="privacy.html">Privacy Policy</a>    
     </footer>
 </body>
