--- a/privacy.html
+++ b/privacy.html
@@ -100,7 +100,7 @@
         <p>We may update this Privacy Policy to reflect changes in the Add-on’s functionality or applicable legal requirements. The latest version will always be available within the Add-on description or website.</p>
 
         <h2>Contact Us</h2>
-        <p>If you have any questions or concerns about this Privacy Policy or the Add-on, please contact us at <a href="mailto:al.manager23@gmail.com">[YourEmail]</a>.</p>
+        <p>If you have any questions or concerns about this Privacy Policy or the Add-on, please contact us at <a href="mailto: ">al.manager23@gmail.com</a>.</p>
     </section>
     <footer>
         <p>© 2024 All rights reserved.</p>
