--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <title>Privacy Policy - SEF Boletins de Alojamento</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,6 +18,18 @@
             padding: 20px;
             background: #6200ea;
             color: white;
+            position: relative;
+        }
+        header a {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+            padding: 8px;
+            background-color: #6200ea;
+            border-radius: 5px;
         }
         h1 {
             margin: 0;
@@ -41,66 +53,39 @@
             background: #333;
             color: white;
         }
+        a {
+            color: #6200ea;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Privacy Policy</h1>
+        <a href="[Insert Home Page Link Here]" target="_blank">Home</a>
+        <h1>Privacy Policy for SEF Boletins de Alojamento</h1>
     </header>
     <section>
         <h2>Introduction</h2>
-        <p>This Privacy Policy explains how <strong>SEF Boletins de Alojamento</strong> ("the Add-on") handles your information when you use it in conjunction with Google Sheets. By using the Add-on, you agree to the terms of this Privacy Policy.</p>
+        <p>At SEF Boletins de Alojamento, we value your privacy. This Privacy Policy outlines how we handle and protect the data that you provide through our Google Sheets Add-on.</p>
 
-        <h2>How the Add-on Works</h2>
-        <p>The Add-on is designed to assist users in automating the process of sending <strong>Boletins de Alojamento</strong> via Webservice to SEF (Serviço de Estrangeiros e Fronteiras) based on data provided in their Google Sheets documents.</p>
+        <h2>Data Collection</h2>
+        <p>Our Add-on does not collect or store any personal information beyond what is required for the Add-on’s functionality:</p>
         <ul>
-            <li>Runs automatically (daily or on-demand) as configured by the user.</li>
-            <li>Processes data within the user’s Google Sheet to prepare and send the required information to SEF.</li>
-            <li>Sends an email notification to the user in case an error occurs during processing.</li>
+            <li>We use your Google email address to notify you if an error occurs during the data submission process.</li>
+            <li>We do not collect or store any data from your Google Sheets or any other private information.</li>
         </ul>
 
-        <h2>Information We Access</h2>
-        <p>The Add-on uses specific Google API scopes to perform its functions:</p>
-        <h3>Non-Sensitive Scopes</h3>
-        <ul>
-            <li><strong>Access to your Google Drive files</strong>: The Add-on accesses only the specific Google Sheets document where it is installed to read and process the data required to send Boletins de Alojamento.</li>
-            <li><strong>View your primary email address</strong>: The Add-on uses your email address to identify you as the user.</li>
-        </ul>
-        <h3>Sensitive Scopes</h3>
-        <ul>
-            <li><strong>Send email on your behalf</strong>: The Add-on sends emails to your email address only when an error occurs during processing. These emails include information about the error to assist in resolving the issue.</li>
-        </ul>
+        <h2>How We Use Your Data</h2>
+        <p>Your email address is only used for error notifications related to the Add-on. We do not share, store, or process any other personal data.</p>
 
-        <h2>Data Handling</h2>
-        <ul>
-            <li><strong>No Private Data is Received or Stored</strong>: The Add-on does not collect, store, or transmit private data to the Add-on owner or any third party.</li>
-            <li><strong>On-the-Fly Processing</strong>: All processing is done locally within the user's Google Sheet and the SEF Webservice. The Add-on does not retain or manage any user data.</li>
-            <li><strong>Email Notifications</strong>: Emails are sent only to the user’s primary Google Account email address in case of an error, ensuring no third-party data sharing occurs.</li>
-        </ul>
+        <h2>Security</h2>
+        <p>Your data is processed securely by the Add-on, and no personal data is stored by us. The Add-on interacts directly with Google Sheets and uses secure web service calls to submit the Boletins de Alojamento to SEF.</p>
 
-        <h2>User Responsibilities</h2>
-        <p>As the user, you are responsible for:</p>
-        <ul>
-            <li>Ensuring the accuracy of the data entered into the Google Sheet.</li>
-            <li>Managing access permissions to the Google Sheet where the Add-on is installed.</li>
-            <li>Complying with local regulations regarding the handling of Boletins de Alojamento.</li>
-        </ul>
+        <h2>Changes to This Policy</h2>
+        <p>We may update this Privacy Policy from time to time to reflect changes in our practices. We encourage you to check this page regularly for any updates.</p>
 
-        <h2>Data Security</h2>
-        <p>The Add-on leverages Google’s secure API environment, ensuring that:</p>
-        <ul>
-            <li>Data transmission occurs over secure connections (HTTPS).</li>
-            <li>Access to your Google Sheets and email is restricted to the specific permissions granted by you when installing the Add-on.</li>
-        </ul>
-
-        <h2>Third-Party Sharing</h2>
-        <p>The Add-on does not share or sell your information to any third party. Data processed by the Add-on is sent directly to SEF's Webservice as configured by the user.</p>
-
-        <h2>Changes to This Privacy Policy</h2>
-        <p>We may update this Privacy Policy to reflect changes in the Add-on’s functionality or applicable legal requirements. The latest version will always be available within the Add-on description or website.</p>
-
-        <h2>Contact Us</h2>
-        <p>If you have any questions or concerns about this Privacy Policy or the Add-on, please contact us at <a href="mailto: ">al.manager23@gmail.com</a>.</p>
+        <h2>Contact Information</h2>
+        <p>If you have any questions about this Privacy Policy, feel free to contact us.</p>
     </section>
     <footer>
         <p>© 2024 All rights reserved.</p>
