added the form template for download

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2>How It Works</h2>
         <p>Once you install the Add-on, follow these simple steps to start automating the process:</p>
         <ul>
-            <li>Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href="[Insert Google Drive Link Here]" target="_blank">here</a>.</li>
+            <li>Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href="https://docs.google.com/forms/d/1iA-Kkq3lrTD5kT0lF_nz7UaAi9hhpIprPC4K76fTU_I/copy" target="_blank">here</a>.</li>
             <li>Install the <strong>SEF Boletins de Alojamento Add-on</strong> in your Google Sheets document.</li>
             <li>The Add-on will process the data in your sheet and send the required information to SEF via Webservice.</li>
             <li>If an error occurs during submission, the Add-on will automatically send you an email notification to keep you informed.</li>
