--- a/privacy.html
+++ b/privacy.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <header>
-        <a href="[Insert Home Page Link Here]" target="_blank">Home</a>
+        <a href="index.html" target="_blank">Home</a>
         <h1>Privacy Policy for SEF Boletins de Alojamento</h1>
     </header>
     <section>
