--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <p>Whether you're managing multiple accommodation records or looking for an easy way to stay compliant with SEF regulations, <strong>SEF Boletins de Alojamento</strong> is the ideal solution to simplify your workflow.</p>
 
         <h2>Learn More About Our Privacy Policy</h2>
-        <p>To understand how we handle your data, please read our <a href="[Insert Privacy Page Link Here]" target="_blank">Privacy Policy</a>.</p>
+        <p>To understand how we handle your data, please read our <a href="privacy.html" target="_blank">Privacy Policy</a>.</p>
     </section>
     <footer>
         <p>© 2024 All rights reserved.</p>
