--- a/privacy.html
+++ b/privacy.html
@@ -61,8 +61,9 @@
 </head>
 <body>
     <header>
-        <a href="index.html" target="_blank">Home</a>
+        
         <h1>Privacy Policy for SEF Boletins de Alojamento</h1>
+        <a href="index.html">Home</a>
     </header>
     <section>
         <h2>Introduction</h2>
