--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         </div>
 
         <h3>Why Use This Add-On?</h3>
-        <p>By automating the process of submitting Boletins de Alojamento to SEF, this tool saves you time and ensures compliance with SEF requirements.</p>
+         <li><strong>Efficient</strong>: Automates the tedious process of submitting accommodation reports to SEF, saving you time and reducing human error.</li>
+         <li><strong>Secure</strong>: Your data is processed directly from your Google Sheet, and no private information is stored or shared. The Add-on only accesses your email to notify you if an error occurs.</li>
+         <li><strong>Simple to Use</strong>: Easily integrate the Add-on into your Google Sheets document with just a few clicks.</li>
     </main>
     <footer>
         <p>&copy; 2024 All rights reserved</p>
