--- a/privacy.html
+++ b/privacy.html
@@ -59,7 +59,7 @@
         <a href="index.html">Home</a>
         <a href="privacy.html">Privacy Policy</a>
     </nav>
-    <section>
+    <main>
         <h2>Introduction</h2>
         <p>At SEF Boletins de Alojamento, we value your privacy. This Privacy Policy outlines how we handle and protect the data that you provide through our Google Sheets Add-on.</p>
 
@@ -81,7 +81,7 @@
 
         <h2>Contact Information</h2>
         <p>If you have any questions about this Privacy Policy, feel free to contact us.</p>
-    </section>
+    </main>
     <footer>
         <p>© 2024 All rights reserved.</p>
     </footer>
