--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <li>Click on <strong><u>SEF Definições -> Configurações</u></strong> and fill in your personal information</li>
                 <li><strong>Important:</strong> Do not modify the structure of the form as it may affect the functionality of the add-on.</li>
                 <li><strong>Note:</strong> Upon registration on SIBA website, if you did not choose the send method <strong>Webservice</strong>, you need to contact them and request to change it.
-                You can find their contacts here <a href="https://siba.ssi.gov.pt/contactos/" target="_blank" >here</a></li>
+                You can find their contacts <a href="https://siba.ssi.gov.pt/contactos/" target="_blank" >here</a></li>
             </ol>
         </div>
 
