--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <li>Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href="https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr">here</a>.</li>
                 <li>After making a copy, you will become the owner of the form. You can then share the form link with your clients to collect their information.</li>
                 <li>Once you start getting responses, navigate to the google sheets Answers and install the Add-on</li>
-                <li>Click on <strong><u>SEF Definições -> Configurações</u></strong> and fill in your personal information</li>
+                <li>Click on <strong>SEF Definições -> Configurações</strong> and fill in your personal information</li>
                 <li><strong>Important:</strong> Do not modify the structure of the form as it may affect the functionality of the add-on.</li>
                 <li><strong>Note:</strong> Upon registration on SIBA website, if you did not choose the send method <strong>Webservice</strong>, you need to contact them and request to change it.
                 You can find their contacts <a href="https://siba.ssi.gov.pt/contactos/" target="_blank" >here</a></li>
